fixed potsu scrollbar not showing up

--- a/src/Styles/PotsuPageStyles.css
+++ b/src/Styles/PotsuPageStyles.css
@@ -1,17 +1,16 @@
 /* width */
 ::-webkit-scrollbar {
-    width: 20px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 10px;
-  }
-  
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: rgb(0, 0, 100);
-    border-radius: 10px;
-  }
-  
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000a99;
+  border-radius: 10px;
+}
